<resources>
    <string name="app_name">CIT</string>
    <string name="test_pass">Pass</string>
    <string name="test_fail">Fail</string>
    <string name="retest">Retest</string>
    <string name="vibrator_test">Vibrator</string>
    <string name="speaker_test">Speaker</string>
    <string name="receiver_test">Receiver</string>
    <string name="camera_auto_focus">Focus</string>
    <string name="camera_take_picture">Shot</string>
    <string name="recorder_test">Recoder Test</string>
    <string name="recording">Recording…</string>
    <string name="record_finish">Record Finished</string>
    <string name="playing">Playing…</string>
    <string name="plug_in_earphone">Plug in earphone to start</string>
    <string name="start">Start</string>
    <string name="press_earphone_key">Press earphone key</string>
    <string name="earphone_key_pressed">Earphone key pressed\nTest OK</string>
    <string name="earphone_test">Earphone</string>
    <string name="key_test">Key Test</string>
    <string name="key_volume_up">Volume Up</string>
    <string name="key_volume_down">Volume Down</string>
    <string name="backlight_test">Backlight Test</string>
    <string name="accelerometer_test">Accelerometer</string>
    <string name="sensor_value_x">X: </string>
    <string name="sensor_value_y">Y:</string>
    <string name="sensor_value_z">Z:</string>
    <string name="proximity_test">Proximity Sensor</string>
    <string name="proximity_sensor_value">Distance:</string>
    <string name="light_sensor_value">Illumination:</string>
    <string name="light_sensor_test">Light Sensor</string>
    <string name="flashlight_test">Flashlight</string>
    <string name="led_test">LED</string>
</resources>
